--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
+
+@import url(https://fonts.googleapis.com/css?family=Trirong);
+
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Trirong", serif;
     background-image: url('https://wallpaper.dog/large/17278498.jpg');
 }
 
@@ -11,9 +13,73 @@ h1 {
    
 }
 
-/* Top left text */
-.top-left {
-    position: absolute;
-    top: 8px;
-    left: 16px;
+.container {
+    position: relative;
+    text-align: center;
+    color: black;
   }
+  
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .card-body{
+    background-color: greenyellow;
+   
+  }
+
+
+  .col-md-6{
+    background-color: black;
+  }
+  
+  .tab-pane{
+    background-color: black;
+  }
+
+  .nav{
+    background-color: black;
+  }
+
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* Style the search field */
+  form.example input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 80%;
+    background: #f1f1f1;
+  }
+  
+  /* Style the submit button */
+  form.example button {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-right: none; /* Prevent double borders */
+    cursor: pointer;
+  }
+  
+  form.example button:hover {
+    background: #0b7dda;
+  }
+  
+  /* Clear floats */
+  form.example::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  
